<resources>
    <string name="app_name">Schat</string>
    <string name="open_connect_tab_title">Open Connects</string>
    <string name="my_connect_tab_title">My Connects</string>
    <string name="profile_tab_title">Profile</string>
    <string name="dummy_nickneme">Johny Kenn</string>
    <string name="dummy_status_string">Dummy status Hi...!</string>
    <string name="dummy_last_login">03/04/2019</string>
    <string name="Username_expln">Please enter a user name in the following box\nUser Name
        is only used to authenticate the user.Then use a Nickname as your
        profile name\nThe Nickname will be shown to others
        in order to identify you..
    </string>
    <string name="Optional_expln">The following are optional details
        required for the sign-up\nThis details will be used to find
        a better match for you if available</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_description">Chose an appropriate password by mixing up alphebets and numbers</string>
    <string name="submit">submit</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_dec">This is not your user name or password. This is just your nickname which will be shown to others</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="location">Location</string>
</resources>
