<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:backgroundTint="@color/colorfadeWhite"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topspacer"
            android:orientation="vertical">

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardPadding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic_view"
                android:layout_width="@dimen/profile_photo_width"
                android:layout_height="@dimen/profile_photo_height"
                android:src="@drawable/sample_prof_pic_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:id="@+id/nickname_and_status_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_pic_view"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/nickname"
                    style="@style/NicknameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_nickneme">

                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/status_tick"
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="" />

                    <TextView
                        android:id="@+id/stat_string"
                        style="@style/StatusStringStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_status_string"

                        >

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/last_login_time"
                style="@style/StatusStringStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_last_login"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>